devscripts (2.16.4) UNRELEASED; urgency=medium

  * mk-build-deps:
    + Only remove the deb after install if --remove was specified.

 -- James McCoy <jamessan@debian.org>  Thu, 21 Apr 2016 19:53:58 -0400

devscripts (2.16.3) unstable; urgency=medium

  [ James McCoy ]
  * uscan:
    + Fix regression in processing FTP listings when file pattern is the tail
      of another filename.  (Closes: #818727)
    + Handle trailing spaces on the watch line when determining whether the
      line specifies the version to check.  (Closes: #818865)
    + xip → xpi in the manpage.  (Closes: #819106)

  [ Paul Wise ]
  * Update chdist bash-completion file with the architectures currently
    (as of 2016-04-02) listed on buildd.debian.org
  * Support xz compressed files in dd-list

  [ Christoph Berg ]
  * origtargz: Clarify manpage about when the tarball is unpacked.
    (Closes: #820494)

 -- James McCoy <jamessan@debian.org>  Wed, 20 Apr 2016 21:18:30 -0400

devscripts (2.16.2) unstable; urgency=medium

  [ Osamu Aoki ]
  * uscan:
    + Print proper warnings for bad rules.  Closes: #814049
    + Fix glitches around rules such as "s<...> <...>g" and add their
      tests.
    + Reactivate --no-verbose mode.  Closes: #815645 
    + Fix --destdir for version 4.  Closes:#814686
    + Always use uscan_warn and uscan_die.
    + Die if the action script fails.  Closes: #810976
  * test_uscan:
    + Fix non-{Debian,Ubuntu} cases.  Closes: #816645
  * debsnap:
    + Add --list option.  Closes: #610048, #679763, #816910
  * manpage-alert:
    + Show package name etc.  Closes: #497320
  * bts:
    + Fail if --sendmail is broken.  Closes: #809318

  [ Dominique Dumont ]
  * licensecheck:
    + parse (c) owner with email like info@foo.com

  [ James McCoy ]
  * debsnap:
    + Only make the destination directory if there is something to download.
      (Closes: #816022)
    + Add --first & --last options to define a range of versions to download.