@@ -2,6 +2,9 @@ devscripts (2.16.4) UNRELEASED; urgency=medium
 
   * mk-build-deps:
     + Only remove the deb after install if --remove was specified.
+  * uscan:
+    + Return early from process_watchline if no download or sig verification
+      is taking place.  (Closes: #822233)
 
  -- James McCoy <jamessan@debian.org>  Thu, 21 Apr 2016 19:53:58 -0400
 
